--- a/AuctionAce.Api/Views/Auction/MyAuctions.cshtml
+++ b/AuctionAce.Api/Views/Auction/MyAuctions.cshtml
@@ -21,7 +21,7 @@
                             <p class="card-text">End Date: <span id="end-date">@item.EndDate</span></p>
                             <p class="card-text">Registered Members: <span id="registered-members">[Registered Members Value]</span></p>
                             <p class="card-text">Items: <span id="items">[Items Value]</span></p>
-                            <a href="@Url.Action("AuctionItemList", "Auction", new { auctionId = item.Id })" class="btn btn-primary">View Auction</a>
+                            @* <a href="@Url.Action("AuctionItemList", "Auction", new { auctionId = item.Id })" class="btn btn-primary">View Auction</a> *@
                         </div>
                     </div>
                 </div>
