--- a/AuctionAce.Api/Views/Calendar/GetCalendarData.cshtml
+++ b/AuctionAce.Api/Views/Calendar/GetCalendarData.cshtml
@@ -4,14 +4,18 @@
 
 <div id="calendar"></div>
 
-<!-- Dodaj odpowiednie pliki FullCalendar -->
-<link href='https://unpkg.com/fullcalendar@5.11.3/main.min.css' rel='stylesheet' />
-<script src='https://unpkg.com/fullcalendar@5.11.3/main.min.js'></script>
-
 <script>
     // Sprawdź dane JSON w konsoli
     var eventsFromServer = @Html.Raw(ViewBag.EventsJson);
     console.log(eventsFromServer);
+
+    var formattedEvents = eventsFromServer.map(event => ({
+        title: event.Title,
+        start: event.Start,
+        end: event.End,    
+        color: event.Color 
+    }));
+
 
     document.addEventListener('DOMContentLoaded', function () {
         var calendarEl = document.getElementById('calendar');
@@ -24,16 +28,11 @@
             },
             initialView: 'dayGridMonth',
             initialDate: '2024-08-12',
-            events: eventsFromServer,
-            eventContent: function (arg) {
-                var isFavorite = arg.event.extendedProps.isFavorite;
-                var heartIcon = isFavorite ? '<span style="color: red;">&#9829;</span>' : '';
-                return {
-                    html: `<div>${heartIcon} ${arg.event.title}</div>`
-                };
-            }
+            events: formattedEvents
         });
 
         calendar.render();
+
     });
 </script>
+
